CMAKE_MINIMUM_REQUIRED(VERSION 2.6.0 FATAL_ERROR)

IF( COMMAND CMAKE_POLICY )
	CMAKE_POLICY( SET CMP0003 NEW )
ENDIF( COMMAND CMAKE_POLICY )

 



LIST(APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/../CMake)
INCLUDE(OrzCMakeModule)
INCLUDE(PrecompiledHeader)
INCLUDE(WheelGame)
INCLUDE(OrzParticleUniverse)
INCLUDE(OgreVedio)

LINK_DIRECTORIES( ${PROJECT_SOURCE_DIR}/lib)


ORZ_PRE_BUILD(NewGameDiamond)

FILE(TO_CMAKE_PATH ${SAN_PROJECT_DIR}/interface SAN_PROJECT_INTERFACE_DIR)
FILE(TO_CMAKE_PATH ${SAN_PROJECT_DIR}/component SAN_PROJECT_COMPONENT_DIR)

INCLUDE_DIRECTORIES(
${SAN_PROJECT_INTERFACE_DIR}
)


ADD_SUBDIRECTORY(VedioUIComponent)
ADD_SUBDIRECTORY(GameDiamondComponent)
ADD_SUBDIRECTORY(GameNeedleComponent)
ADD_SUBDIRECTORY(NewGameSceneComponent)



INSTALL(CODE "FILE(APPEND ${CMAKE_INSTALL_PREFIX}/bin/debug/plugins.cfg \"\\nPlugin=ParticleUniverse_d\\n\")")
INSTALL(CODE "FILE(APPEND ${CMAKE_INSTALL_PREFIX}/bin/release/plugins.cfg \"\\nPlugin=ParticleUniverse\\n\")")
ORZ_POST_BUILD()

INCLUDE(FindSanProject)