CMAKE_MINIMUM_REQUIRED(VERSION 2.6.0 FATAL_ERROR)

IF( COMMAND CMAKE_POLICY )
	CMAKE_POLICY( SET CMP0003 NEW )
ENDIF( COMMAND CMAKE_POLICY )

 



LIST(APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/../CMake)
INCLUDE(OrzCMakeModule)
INCLUDE(PrecompiledHeader)
INCLUDE(OgreVedio)
LINK_DIRECTORIES( ${PROJECT_SOURCE_DIR}/lib)


ORZ_PRE_BUILD(NewGameVedioUI)

FILE(TO_CMAKE_PATH ${SAN_PROJECT_DIR}/interface SAN_PROJECT_INTERFACE_DIR)
FILE(TO_CMAKE_PATH ${SAN_PROJECT_DIR}/component SAN_PROJECT_COMPONENT_DIR)

INCLUDE_DIRECTORIES(
${SAN_PROJECT_INTERFACE_DIR}
)


ADD_SUBDIRECTORY(VedioUIComponent)
ADD_SUBDIRECTORY(UnitTest)


ORZ_POST_BUILD()

INCLUDE(FindSanProject)


INSTALL(CODE "FILE(APPEND ${CMAKE_INSTALL_PREFIX}/bin/debug/plugins.cfg \"
Plugin=Plugin_OgreVideo_d
\")")
INSTALL(CODE "FILE(APPEND ${CMAKE_INSTALL_PREFIX}/bin/release/plugins.cfg \"
Plugin=Plugin_OgreVideo
\")")